# libobjects

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: binaries.cmake  external.cmake
libcomp/src/: SqratInt64.h  SqratTypesInclude.h
libobjects/: CMakeLists.txt
